--- a/styles/pillarCard.module.css
+++ b/styles/pillarCard.module.css
@@ -2,10 +2,9 @@
     display: flex;
     padding-left: 2%;
     padding-top: 3%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2%;
-    width: 20vw;
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 18vw;
     height: 30vh;
     background: #FFFFFF;
     border-radius: 25px;
@@ -13,7 +12,7 @@
 
 .cardTitle {
     position: relative;
-    width: 11rem;
+    width: 15rem;
     left: 5%;
     margin-right: 5%;
     font-family: 'Hatton';
